[package]
edition = "2024"
name = "eh_page_downloader"
version = "0.1.0"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = {version = "4.5.40", features = ["derive"]}
indicatif = {version = "0.17.11", features = ["tokio"]}
rand = "0.9.1"
reqwest = {version = "0.12.20", features = ["rustls-tls"]}
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
scraper = "0.23.1"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tempfile = "3.20.0"
tokio = {version = "1.45.1", features = ["full"]}
